--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./public/images:/app/public/images
   database:
-    image: 'mongo'
+    image: 'mongo:latest'
     env_file: .env
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
